2002-03-18  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/dialogs/goto.glade : removed navigator part
	* dialog-goto-cell.c : 	removed navigator

2002-03-18  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solver.glade : Added a button for quadratic programming.

	* dialog-solver.c : Handle LP, QP radio buttons.

2002-03-17  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/dialogs/goto.glade : new
	* dialog-goto-cell.c : ported to gnome2, made into guru and 
	  redesigned. The navigator is not implemented.

2002-03-17  Jody Goldberg <jody@gnome.org>

	* dialog-cell-format.c (fmt_dialog_init_font_page) : fix underline
	  handling by converting to gnumeric-combo-text.  Thanks to Almer for
	  pointing me at this code.
	(cb_font_underline_changed) : change signal semantics to match
	  the new combo.
	* cell-format.glade : Use a custom type.

2002-03-17  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/dialogs/dialog-search-replace.c : ported to gnome2
	* src/dialogs/search-replace.glade : ported to gnome2 and 
	  redesigned

2002-03-17  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* solver.glade, dialog-solver.c : Added BOOL constraint support.

2002-03-16  Jon K Hellan  <hellan@acm.org>

	* dialog-cell-format.c (BorderPicker): Add is_auto_color member.
	(FormatState.border): Ditto.
	(FormatState.back): Remove back_color_is_default.
	(setup_color_pickers): Remove default_color, mcolor
	parameters. Handle autocolors.
	(cb_font_preview_color, cb_back_preview_color,
	cb_pattern_preview_color, border_get_mstyle,
	border_format_has_changed, cb_border_color, init_border_button,
	fmt_dialog_impl): Handle autocolors.
	(draw_pattern_selected): Remove old default color handling code.

2002-03-16  Jody Goldberg <jody@gnome.org>

	* dialog-cell-format.c (setup_color_pickers) : The signal has changed
	  name as well as signature.

2002-03-16  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* dialog-solver.c (cb_dialog_solve_clicked): Store the status of