@@ -1,3 +1,9 @@
+2002-03-19  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>
+
+	* solver.glade : Improved label.
+
+	* dialogs-solver.c : QP related changes.
+
 2002-03-18  Andreas J. Guelzow <aguelzow@taliesin.ca>
 
 	* src/dialogs/goto.glade : removed navigator part
